# ondes

./: .gitignore  CLAUDE.md  README.md  build.gradle  go.mod  go.sum  plan.MD
audio/: wav.go
audiodev/: audiodev.go
c/: .clangd  CMakeLists.txt  Makefile
c/bench/: note_setup.c  render_throughput.c
c/doc/: CPort.md  timings.md
c/include/ondes/: arena.h  audiodev.h  component.h  instant.h  limiter.h  midi.h  mididev.h  patch.h  smf.h  spec.h  synth.h  voice.h  wav.h  wire.h
c/src/audio/: wav.c
c/src/audiodev/: audiodev.c  miniaudio_impl.c
c/src/cmd/: o.c  p.c
c/src/component/: balancer.c  computil.c  computil.h  controller.c  echo.c  env.c  filter.c  iir.h  iir_specs.c  midinote.c  mix.c  opamp.c  registry.c  smooth.c  wave.c
c/src/midi/: smf.c
c/src/mididev/: coremidi.c  winmm.c
c/src/patch/: patch.c  spec.c  yaml_spec.c
c/src/synth/: instant.c  limiter.c  synth.c  voice.c  wire.c
c/src/util/: arena.c
c/test/: test_main.c
cmd/audioInfo/: main.go
cmd/midiInfo/: main.go
cmd/midiMon/: main.go
cmd/o/: main.go
cmd/p/: main.go  render_test.go
cmd/spike/: main.go
component/: component.go
component/balancer/: balancer.go
component/controller/: controller.go
component/echo/: echo.go
component/env/: env.go
component/filter/: filter.go  iir_specs.go
component/midinote/: midinote.go
component/mix/: mix.go
component/opamp/: opamp.go
component/smooth/: smooth.go
component/wave/: wave.go
doc/: GoPort.md  timings.MD
midi/: smf.go
mididev/: mididev.go
patch/: patch.go
program/: balancer.yaml  smooth.yaml  vibrato.yaml
regression/: MakeTestMidi.java  check.sh  check_c.sh  check_c_pool.sh  diff_summaries.py  doc.go  gen-fixtures.sh  regression_test.go  renders.lst  setup_bench_test.go  summarize.py
regression/fixtures/mid/: chord.mid  close_encounters.mid  scale.mid  sustain.mid
regression/fixtures/summary/: ah-fm-ce.json  ah-fm.json  balancer.json  bassoon-ce.json  bassoon.json  bell-ce.json  bell-organ-ce.json  bell-organ-chord.json  bell-organ.json  bell.json  brass-ce.json  brass.json  buzz-ce.json  buzz.json  fade-octave-ce.json  fade-octave.json  fourths-ce.json  fourths.json  glock-ce.json  glock.json  no-fundamental-ce.json  no-fundamental.json  ocean2.json  octave-organ-ce.json  octave-organ.json  pink-ce.json  pink.json  pwm-ce.json  pwm.json  ramp-down-ce.json  ramp-down.json  ramp-up-ce.json  ramp-up.json  repeater-ce.json  repeater.json  ring-mod-ce.json  ring-mod.json  saw-ce.json  saw.json  sine-ce.json  (+9 more)
synth/: instant.go  junction.go  limiter.go  synth.go  synth_test.go  voice.go  wire.go
